[project]
name = "nortech"
version = "0.11.0"
description = "Nortech Python SDK"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "bytewax>=0.21.0",
    "eval-type-backport>=0.2.0",
    "ipython>=8.18.1",
    "pandas>=2.2.2",
    "pint>=0.24.3",
    "polars>=1.7.1",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.1",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "structlog>=25.4.0",
    "tzlocal>=5.2",
    "urllib3<2.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240807",
    "pyarrow-stubs>=17.5",
    "pydoc-markdown>=4.8.2",
    "pytest-cov>=6.0.0",
    "pytest-snapshot>=0.9.0",
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "types-python-dateutil>=2.9.0.20240906",
    "types-requests>=2.31.0.6",
    "types-urllib3>=1.26.25.14",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "A",  # Flake8 builtin codes
    "B",  # Bugbear codes
    "D",  # Pydocstyle codes
    "E",  # Pyflakes error codes
    "F",  # Pyflakes warning codes
    "FA", # Pyflakes future annotations codes
    "I",  # Isort codes
    "N",  # Naming conventions
    "PD", # Pandas Vet
    "Q",  # Flake8-Quotes
    "S",  # Security issues
    "W",  # PEP 8 warning codes
]
ignore = [
    "A005",   # Module `signal` shadows a Python standard-library module
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class	
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D203",   # Incorrect black line before class
    "D212",   # Multi line summary first line
    "E501",   # Line too long
    "S101"    # Use of `assert` detected
]
